infrastructure/traefik-internal-8443-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal-8443
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
    - name: websecure-8443
      port: 8443
      targetPort: websecure
